@@ -441,6 +441,27 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>${javafx.maven.plugin.version}</version>
+                    <configuration>
+                        <options>
+                            <option>--add-opens</option>
+                            <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                            <option>--add-exports</option>
+                            <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
+                        </options>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -657,10 +678,11 @@
             <artifactId>testfx-junit5</artifactId>
             <version>4.0.16-alpha</version>
         </dependency>
+        <!-- jdk-9+181 for Java 9, jdk-11+26 for Java 11 -->
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-12.0.1+2</version> <!-- jdk-9+181 for Java 9, jdk-11+26 for Java 11 -->
+            <version>jdk-12.0.1+2</version>
             <scope>test</scope>
         </dependency>
 
@@ -672,6 +694,11 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
             <version>${javafx.version}</version>
         </dependency>
 
